refact : remove id fild
